--- a/weekly summary/2018-01-25.md
+++ b/weekly summary/2018-01-25.md
@@ -74,15 +74,19 @@
      **by value**
      	* is slower than by reference since the system has to copy the parameter
      	* used for input only
-
      **by reference**
      	* faster since only a pointer is passed
      	* used for input and output
          * can be very dangerous if used in conjunction with global variables
-
      ```
 
-     ​
 
-### 2. Identify sentences using similar techs & classify sentences using patterns
+### 2. Identify sentences using similar techniques & classify sentences using patterns
 
+1. extract techniques from [cateInGroups_freq100_v2.txt](https://github.com/hy3440/diffSimilarTech/blob/master/data/cateInGroups_freq100_v2.txt) and store in [a *pkl* file](https://github.com/hy3440/diffSimilarTech/blob/master/data/pairs.pkl)
+2. results of identifying sentences which contain similar techniques:
+   * [tech_sentences.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/tech/tech_sentences.txt): 5606 / 510513 sentences, post id from 0 to 99999 (58889)
+   * [tech_sentences_2.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/tech/tech_sentences_2.txt): 6213 / 360102 sentences, post id from 100000 to 199999 (67567)
+3. classify sentences
+   * use all tags: [592 / 11819 sentences](https://github.com/hy3440/diffSimilarTech/tree/master/out/tech/classified_by_tags)
+   * use similar tech: [499 / 11819 sentences](https://github.com/hy3440/diffSimilarTech/tree/master/out/tech/classified_by_tech)
