Update weekly summary

--- a/weekly summary/2018-02-01.md
+++ b/weekly summary/2018-02-01.md
@@ -32,6 +32,10 @@ Comparative sentences: 5632 / 4128965
 
    i have never used `grails` or`rails` (`ruby-on-rails`) before but i have used `groovy` and `ruby` before and as a language i think **`ruby` is much cleaner and more consistent** and the team might enjoy production more
 
+   ![2018-02-01-1.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-1.png)
+
+   ![2018-02-01-2.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-2.png)
+
 4. pattern problem(?)
 
    Post 583:
@@ -57,6 +61,10 @@ Comparative sentences: 2927 / 4520293
    `asp.net` & `asp.net-mvc`
 
    i think using `asp.net mvc` source is **much better than** reflector
+
+   ![2018-02-01-3.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-3.png)
+
+   ![2018-02-01-4.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-4.png)
 
 ### 3. Topic analysis
 
