Update weekly summary

--- a/weekly summary/2018-02-01.md
+++ b/weekly summary/2018-02-01.md
@@ -44,6 +44,163 @@ Comparative sentences: 5632 / 4128965
 
    personally i **prefer `int`** `string` `double` etc
 
+5. cannot find corresponding tag
+
+```
+content-type_header,content-type_headers
+microseconds,microsecond,micro-second,micro-seconds
+factory_method,factory_method_pattern,the_factory_method_pattern,factory_pattern
+short-circuit_evaluation,short-circuiting_evaluation,short_circuit_evaluation,short-circuit_evaluated,short-circut_evaluation
+layout_weight,layout_height,layout_width
+xpath_expressions,xpath_expression
+the_event_object,event_object,eventobject
+reuseable,reused,re-uses,reuse,re-usable,re-useable,reuses,re-use,reusable
+report_viewer_control,reportviewer_control
+datamemberattribute,datamember_attribute
+cscript.exe,cscript
+event_driven_architecture,event-driven_architecture
+ca_certificates,ca_certificate
+zoom-in,zoomin
+negative_lookaround,negative_lookarounds
+lalr_parsers,lalr_parser
+serialize_unserialize,serialize_deserialize
+implementing_inotifypropertychanged,implements_inotifypropertychanged,implement_inotifypropertychanged,implemented_inotifypropertychanged
+queryselectorall,.queryselectorall,queryselector,.queryselector
+refcount,ref_count
+craete,creat,created,create,creates,creted,crete,crated,creats
+teams,team
+whereever,where-ever,wherever
+mediator_pattern,the_mediator_pattern
+xml-schema,xml_schemas,xml_schema
+atomic_operation,atomic_operations
+dependencyproperty_value_precedence,dependency_property_value_precedence
+containable_behaviour,containable_behavior
+ctrl+a,ctrl-a
+ctrl-b,ctrl+b
+ctrl+d,control-d,ctrl-d
+ctrl+i,ctrl-i
+ctrl-k,ctrl+k
+ctrl+q,ctrl-q
+ctrl-r,ctrl+r
+ctrl_+_v,ctrl-v,ctrl_+_v=,ctrl+v
+swingutilities.invokelater,swingutilities#invokelater
+ctrl+x,ctrl-x
+the_singleton_pattern,singleton_pattern,singleton-pattern,singleton_pattern.,singelton_pattern
+smart_match_operator,smartmatch_operator
+database_transaction,database_transactions
+coment,commet
+programming_paradigm,programming_paradigms
+tweeking,tweeks,tweek
+restapi,rest-api,rest_api,rest_apis
+mebibytes,mebibyte
+parameter-less,parameterless
+event.stoppropogation,e.stoppropagation,event.stoppropagation
+denormal_number,denormalized_numbers,denormal_numbers
+ctrl-z,ctrl+z,control-z,ctrl_+_z
+uitableviewcontroller,uitableviewcontrollers
+scraping,scrapping
+pkcs#7_padding,pkcs7_padding
+ms-sql,msql,mssql,ms_sql
+nul-terminated_string,null-terminated_strings,null_terminated_string,null-terminated_string
+positive_look-behind,positive_lookbehind
+gnu_readline_library,gnu_readline
+gadgets,gadget
+researches,reasearch,reseach,research
+gnu_grep_for_windows,grep_for_windows
+manger,manager,managers
+active_record_pattern,activerecord_pattern,active_record_class,active-record_pattern
+memento_pattern,momento_pattern
+on-screen,onscreen
+date.gettime,date#gettime
+projecta,proja
+projb,projectb
+sql_statment,sql_statement,sql-statement,sql_statements
+exposes,expose,exposed
+dateutil,dateutils
+longitudes,longtitude,longitude,logitude,langitude,longitud,longitute
+service_locator_anti-pattern,service_locator_anti_pattern,servicelocator_anti-pattern
+gotchas,gotcha
+keyup_events,keyup_event
+string#replace,string.replace
+milions,milion,millions
+bijective_functions,bijective_function
+phones,phone
+delegate_design_pattern,delegation_pattern,delegator_pattern,delegate_pattern
+m2e_plugin,m2eclipse_plugin
+first_class_citizens,first-class_citizens,first-class_citizen
+recycler_view,recycleview,recyclerview
+positive_look_ahead,positive_look-ahead,positive_lookaheads,positive_lookahead
+xsd_schema,xsd_schemas
+subnormal_numbers,subnormal_number
+cache-control_header,cache-control_headers
+reserves,reserve
+greedy_algorithms,greedy_approach,greedy_algorithm
+indent_style,indent_styles
+epd,enthought_python_distribution
+invoice_id,invoiceid
+content_inset,contentinset
+variable_scoping,variables_scope,variable_scope
+string.lastindexof,string#lastindexof
+ms_connect,microsoft_connect
+view_frustum,viewing_frustum
+inorder_traversal,in-order_traversal
+whether,wheter,wheather
+normalized_cross-correlation,normalized_cross_correlation
+sigmoid_functions,sigmoid_function
+uglify,uglifying
+messaging_framework,messages_framework,the_messages_framework
+traps,trap
+langauges,languages,langage,language,langauge
+utf-8_bom,utf-8_byte_order_mark,utf-8_with_bom
+sentinel_value,sentinel_values
+fixed_point_arithmetics,fixed_point_arithmetic,fixed-point_arithmetic
+exclude,exlude,excluded,excludes
+schemaxml,schema.xml
+closable,closeable
+destructured_assignment,destructuring_assignment
+stashes,stash
+misra-c,misra_c
+injection,injecting
+chain_of_responsibility_pattern,chain-of-responsibility_pattern
+keydown_event,keydown_events
+jsp_servlets,jsp_servlet
+burp_suite,burpsuite
+js_beautifier,jsbeautifier
+uitableviewcells,uitableview_cell,uitableviewcell
+w3school,w3schools,w3_schools
+jquery_ujs,jquery-ujs
+ant_tasks,ant_task
+iterate,iterated,iterates
+tarball,tarballs,tar_ball
+parity_bits,parity_bit
+string#replaceall,string.replaceall
+generator-angular-fullstack,angular-fullstack_generator
+sequence_types,sequence_type
+osi_modle,osi_model
+wysiwig,wysiwyg_editor
+datacontractserializer_class,datacontractjsonserializer_class
+expressjs,express.js
+memoized,memoize,.memoize
+ctrl_+,ctrl+
+util,utils
+newspaper,newspapers
+java_servlets,java_servlet
+entry,entrys
+materializecss,materialize_css
+appassembler-maven-plugin,appassembler_maven_plugin
+zip_file_format,zip_format
+normal_forms,normal_form
+cname_records,cname_record
+java_applet,java_applets
+begintransaction,begin_transaction
+latitude,latitute,lattitude
+well-formed_xml,well_formed_xml
+compiler,compilers
+serviceknowntypeattribute,serviceknowntype_attribute
+equivalence_relations,equivalence_relation
+luhn's_algorithm,luhn,luhn_algorithm
+```
+
 ### 2. Only similar techniques are `TECH` 
 
 **Results**: [comparative_sentencs.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/tech_v3/comparative_sentences.txt) 
@@ -100,5 +257,6 @@ better, less, faster, easier, slower, memory, control, framework, greater,versio
 
 [Chen, Y. Y., Wiratunga, N., & Lothian, R. (2017, July). Effective dependency rule-based aspect extraction for social recommender systems. Association for Information Systems.](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Effective%20Dependency%20Rule%20-based%20Aspect%20%20Extraction%20for%20Social%20Recommender%20%20Systems%20.pdf)
 
+[Asghar, M. Z., Khan, A., Zahra, S. R., Ahmad, S., & Kundi, F. M. (2017). Aspect-based opinion mining framework using heuristic patterns. *Cluster Computing*, 1–19. http://doi.org/10.1007/s10586-017-1096-9](https://link.springer.com/content/pdf/10.1007%2Fs10586-017-1096-9.pdf)
 
-
+[Zhi, S., Li, X., Zhang, J., Fan, X., Du, L., & Li, Z. (2017). Aspects Opinion Mining Based on Word Embedding and Dependency Parsing. *Proceedings of the International Conference on Advances in Image Processing  - ICAIP 2017* (pp. 210–215). ACM. http://doi.org/10.1145/3133264.3133305](https://dl.acm.org/ft_gateway.cfm?id=3133305&ftid=1912733&dwn=1&CFID=3985885&CFTOKEN=9e82940df938b548-10921560-AC56-1FFC-F45B1EF162C3F58E)
