Update weekly summary

--- a/weekly summary/2018-02-01.md
+++ b/weekly summary/2018-02-01.md
@@ -227,8 +227,6 @@ Comparative sentences: 2927 / 4520293
 
 **Word frequency**: (after removing stop words, modal verbs and `TECH`s) [word_frequency.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/word_frequency.txt)
 
-better, less, faster, easier, slower, memory, control, framework, greater,version, performance, longer, smaller, larger, higher, bigger, complicated, flexible
-
 **Gensim LDA**: (after removing stop words, modal verbs, `TECH`s, `CIN`s and `CV`s)
 
 	Topic 0: 0.013*"much" + 0.013*"code" + 0.013*"better" + 0.009*"using" + 0.008*"use" + 0.008*"need" + 0.007*"data" + 0.006*"done" + 0.006*"less" + 0.005*"application"
@@ -260,3 +258,21 @@ better, less, faster, easier, slower, memory, control, framework, greater,versio
 [Asghar, M. Z., Khan, A., Zahra, S. R., Ahmad, S., & Kundi, F. M. (2017). Aspect-based opinion mining framework using heuristic patterns. *Cluster Computing*, 1–19. http://doi.org/10.1007/s10586-017-1096-9](https://link.springer.com/content/pdf/10.1007%2Fs10586-017-1096-9.pdf)
 
 [Zhi, S., Li, X., Zhang, J., Fan, X., Du, L., & Li, Z. (2017). Aspects Opinion Mining Based on Word Embedding and Dependency Parsing. *Proceedings of the International Conference on Advances in Image Processing  - ICAIP 2017* (pp. 210–215). ACM. http://doi.org/10.1145/3133264.3133305](https://dl.acm.org/ft_gateway.cfm?id=3133305&ftid=1912733&dwn=1&CFID=3985885&CFTOKEN=9e82940df938b548-10921560-AC56-1FFC-F45B1EF162C3F58E)
+
+### 5.
+
+Project title
+
+Learning objectives
+
+Project description
+
+Assessed project components:
+
+Report: name style: (e.g. research report, software description…,)
+
+Artefact: name kind: (e.g. software, user interface, robot…,)
+
+![](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/IMG_2067.jpg)
+
+![](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/IMG_2068.jpg)
