Update weekly summary

--- a/weekly summary/2018-02-01.md
+++ b/weekly summary/2018-02-01.md
@@ -8,7 +8,7 @@ Comparative sentences: 5632 / 4128965
 
 **Problems**:
 
-1. `line` and `lines` are synonyms and similar techniques.
+1. `line` and `lines` are synonyms and similar techniques at the same time.
 
    Post 7018:
 
@@ -16,25 +16,15 @@ Comparative sentences: 5632 / 4128965
 
    tons more `line` of code **much faster than** the awk script
 
-2. all tags are `TECH` or only similar techniques are `TECH`.
+2. `authorization` and `authentication` are synonyms and similar techniques
+
+3. all tags are `TECH` or only similar techniques are `TECH`.
 
    Post 2767:
 
    `add-on` & `plugins`
 
    can anyone **recommend `any`** good `add-on` `plugins` for `microsoft visual studio`
-
-3. more than one similar technique pairs in one sentence.
-
-   Post 5132:
-
-   `ruby-on-rails` & `grails`
-
-   i have never used `grails` or`rails` (`ruby-on-rails`) before but i have used `groovy` and `ruby` before and as a language i think **`ruby` is much cleaner and more consistent** and the team might enjoy production more
-
-   ![2018-02-01-1.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-1.png)
-
-   ![2018-02-01-2.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-2.png)
 
 4. pattern problem(?)
 
@@ -222,6 +212,18 @@ Comparative sentences: 2927 / 4520293
    ![2018-02-01-3.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-3.png)
 
    ![2018-02-01-4.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-4.png)
+
+2. more than one similar technique pairs in one sentence.
+
+   Post 5132:
+
+   `ruby-on-rails` & `grails`
+
+   i have never used `grails` or`rails` (`ruby-on-rails`) before but i have used `groovy` and `ruby` before and as a language i think **`ruby` is much cleaner and more consistent** and the team might enjoy production more
+
+![2018-02-01-1.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-1.png)
+
+![2018-02-01-2.png](https://github.com/hy3440/diffSimilarTech/blob/master/weekly%20summary/2018-02-01-2.png)
 
 ### 3. Topic analysis
 
