Update weekly summary

--- a/weekly summary/2018-02-01.md
+++ b/weekly summary/2018-02-01.md
@@ -16,9 +16,126 @@ Comparative sentences: 5632 / 4128965
 
    tons more `line` of code **much faster than** the awk script
 
-2. `authorization` and `authentication` are synonyms and similar techniques
+   ```
+   ram	ramdisk
+   serialization	deserialization
+   exslt	libxslt
+   directory	dir
+   tor	stem
+   serialization	serializable
+   fso	filesystemobject
+   controllers	controller
+   authorization	authentication
+   height	width
+   substr	substring
+   outputstream	inputstream
+   fileinputstream	fileoutputstream
+   sign	signing
+   pack	unpack
+   downcast	downcasting
+   minimized	minimize
+   callback	asynccallback
+   denormalized	denormalization
+   sqlite-net	sqlite.net
+   collections	observablecollection
+   angular	angularjs
+   ado	ado.net
+   builder-pattern	builder
+   uicollectionview	uicollectionviewcell
+   cell	cells
+   gridview	datagridview
+   grid	gridview
+   asp.net	.net
+   asp.net	asp.net-mvc
+   .net	asp.net-mvc
+   calendar	calendarview
+   compareto	icomparable
+   formsets	formset
+   line	lines
+   cruisecontrol	cruisecontrol.net
+   request	httprequest
+   encoding	encode
+   encoding	decode
+   decode	encode
+   model	datamodel
+   messagebox	message
+   adapter	adaptor
+   jcarousellite	jcarousel
+   jscript.net	jscript
+   listener	listeners
+   listener	actionlistener
+   actionlistener	listeners
+   feed	feeds
+   handshake	handshaking
+   ant	maven
+   sync	synchronization
+   controllers	controller
+   subclass	subclassing
+   mod	modulo
+   line	lines
+   nsoperationqueue	nsoperation
+   textfield	uitextfield
+   packets	packet
+   inputaccessoryview	accessoryview
+   alt	rel
+   slider	flexslider
+   slideup	slide
+   directory	dir
+   copy-paste	paste
+   submission	submit
+   maven-plugin	maven
+   numerical	numeric
+   nsurlconnection	nsurl
+   controllers	controller
+   sorted	set
+   cell	cells
+   scriplets	scriptlet
+   throw	throws
+   encoding	encode
+   processor	processors
+   uilocalnotification	localnotification
+   line	lines
+   nvd3.js	d3.js
+   swfupload	upload
+   shell	subshell
+   directory	dir
+   hashmap	map
+   controllers	controller
+   sequence	seq
+   sequences	subsequence
+   preloader	reload
+   maven-plugin	maven
+   maven-plugin	maven
+   streamwriter	writer
+   maven-plugin	maven
+   exec-maven-plugin	maven-plugin
+   msgpack	messagepack
+   parallel.foreach	parallel.for
+   alt	rel
+   plupload	upload
+   listener	listeners
+   listener	onclicklistener
+   listener	clicklistener
+   clicklistener	onclicklistener
+   listeners	onclicklistener
+   clicklistener	listeners
+   ckeditor	fckeditor
+   binutils	gnu
+   subtract	subtraction
+   listener	clicklistener
+   flashvars	fla
+   line	lines
+   https	http
+   linq	linq-to-sql
+   asp.net	.net
+   listview	listviewitem
+   linq-to-dataset	linq
+   category	categories
+   gtk	gtk#
+   throw	throws
+   ```
 
-3. all tags are `TECH` or only similar techniques are `TECH`.
+2. all tags are `TECH` or only similar techniques are `TECH`.
 
    Post 2767:
 
@@ -26,7 +143,7 @@ Comparative sentences: 5632 / 4128965
 
    can anyone **recommend `any`** good `add-on` `plugins` for `microsoft visual studio`
 
-4. pattern problem(?)
+3. pattern problem(?)
 
    Post 583:
 
@@ -34,7 +151,7 @@ Comparative sentences: 5632 / 4128965
 
    personally i **prefer `int`** `string` `double` etc
 
-5. cannot find corresponding tag
+4. cannot find corresponding tag
 
 ```
 content-type_header,content-type_headers
