--- a/weekly summary/2018-03-08.md
+++ b/weekly summary/2018-03-08.md
@@ -19,7 +19,83 @@ Post ID from 0 to **12,900,000**
 
 **Tech1** VBZ (e.g. uses, has) **more NN** than **Tech2**
 
+**Example**:
+
+46614
+
+post	get
+
+pattern10		pattern8
+
+**post** is also **more secure** than **get** because you aren t sticking information into a url
+
+**Problems**:
+
+1. *compared to* and several similar tech pairs
+
+853042
+
+ienumerable	icollection	ienumerable	ilist	ilist	icollection
+
+pattern7
+
+compared to **ienumerable** and **icollection** **ilist** performs much **better** for large or dynamic **lists** because it provides an indexer allowing us quick random access
+
+2. several aspects
+
+2336560
+
+gif	png
+
+pattern7
+
+compared to **gif** **png** offers **better compression** **larger pallette** and **more features** including transparency
+
+3. extract aspect
+
+34338
+
+phpunit	simpletest
+
+pattern0		
+
+i found **simpletest** was even **easier** than **phpunit** to *set up*
+
+| No   | Pattern         |
+| ---- | --------------- |
+| 2    | CV * CIN * TECH |
+| 3    | CV VBG TECH     |
+| 4    | CV TECH         |
+
+**Examples**
+
+1. 74992
+
+bash	zsh
+
+pattern4		pattern2		
+
+i prefer **zsh** over **bash** because of its support for very powerful file globbing variable expansion modifiers and faster tab completion
+
+2. 330657
+
+post	get
+
+pattern3	
+
+security wise i prefer using **post** than **get** as it gives at least some opaqueness as to what is being passed as a parameter and not anyone can just edit the url and play around
+
+3. 475026
+
+crypt	hash
+
+pattern4		
+
+also instead of using **crypt** you may prefer **hash** because this allows you to keep the string setting for the hash algorithm elsewhere
+
 ### 2. Train word embedding
+
+`model = gensim.models.Word2Vec(sentences, min_count=20, size=200, workers=8)`
 
 ```
 2018-03-07 23:08:43,529 : INFO : collected 13001639 word types from a corpus of 2834329535 raw words and 222847980 sentences
