--- a/weekly summary/2018-03-15.md
+++ b/weekly summary/2018-03-15.md
@@ -1,8 +1,8 @@
-### 1. Extract comparative relations
+### 1. Relation extraction
 
-**1059** tech pairs: [relations.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/relations.txt)
+**1004** tech pairs: [relations.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/relations.txt)
 
-**8924** pattern 0,7,8,10 / **13037** [comparative sentences](https://github.com/hy3440/diffSimilarTech/blob/master/relation/sentences_.txt)/ **1295662** sentences containing similar techs
+**8112** pattern 0,7,8,10 / **11850** [comparative sentences](https://github.com/hy3440/diffSimilarTech/blob/master/relation/sentences_.txt)/ **1164105** sentences containing similar techs
 
 Post ID from 0 to **29,000,000**
 
@@ -19,49 +19,43 @@ Post ID from 0 to **29,000,000**
 
 **Tech1** VBZ (e.g. uses, has) **more NN** than **Tech2**
 
-**Example**:
-
-46614
-
-post	get
-
-pattern10		pattern8
-
-**post** is also **more secure** than **get** because you aren t sticking information into a url
-
 **Problems**:
 
-1. *compared to* and several similar tech pairs
+1. 10809
 
-853042
+   listview	gridview
 
-ienumerable	icollection	ienumerable	ilist	ilist	icollection
+   pattern0	better	
 
-pattern7
+   `listview` much better than the `gridview` `dataview` in that they let you write out clean html
 
-compared to **ienumerable** and **icollection** **ilist** performs much **better** for large or dynamic **lists** because it provides an indexer allowing us quick random access
+2. 27439
 
-2. several aspects
+   postgresql	mysql
 
-2336560
+   pattern10	more correct
 
-gif	png
+   from how i understand it `postgresql` is a more correct database implementation while `mysql` is less correct less compliant but faster
 
-pattern7
+3. 65079
 
-compared to **gif** **png** offers **better compression** **larger pallette** and **more features** including transparency
+   wideimage	phpthumb
 
-3. extract aspect
+   pattern10	more modern	
 
-34338
-
-phpunit	simpletest
-
-pattern0		
-
-i found **simpletest** was even **easier** than **phpunit** to *set up*
+   `wideimage` is the more modern php5 approach while `phpthumb` has much more features
 
 ### 2. Topic analysis
+
+**Adjectives**: [JJ.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/jj.txt)
+
+**Comparative adjectives**: [JJR.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/jjr.txt)
+
+**Nouns**: [NN.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/nn.txt)
+
+**Comparative adverbs**: [RBR.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/rbr.txt)
+
+**Others**: [OTHERS.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/other.txt)
 
 ### 3. Pattern 2, 3, 4
 
@@ -73,6 +67,6 @@ i found **simpletest** was even **easier** than **phpunit** to *set up*
 
 [pattern234.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/pattern234.txt)
 
-**4113** pattern 2,3,4 / **13037** [comparative sentences](https://github.com/hy3440/diffSimilarTech/blob/master/relation/sentences_.txt)/ **1295662** sentences containing similar techs
+**3738** pattern 2,3,4 / **11850** [comparative sentences](https://github.com/hy3440/diffSimilarTech/blob/master/relation/sentences_.txt)/ **1164105** sentences containing similar techs
 
 Post ID from 0 to **29,000,000**
