--- a/weekly summary/2018-03-22.md
+++ b/weekly summary/2018-03-22.md
@@ -67,6 +67,10 @@ The results of **Stanford OpenIE**: (confidence; subject; relation; object)
 
 **Others**: [OTHERS.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/other.txt)
 
+[Uddin, G., & Khomh, F. (2017, October). Opiner: An opinion search and summarization engine for APIs. In *Automated Software Engineering (ASE), 2017 32nd IEEE/ACM International Conference on* (pp. 978-983). IEEE.]()
+
+[](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Automatic%20Summarization%20of%20API%20Reviews.pdf)
+
 ### 3. Pattern 2, 3, 4
 
 | No   | Pattern         |
