--- a/weekly summary/2018-03-22.md
+++ b/weekly summary/2018-03-22.md
@@ -19,7 +19,9 @@ Post ID from 0 to 47615407 (Score >= 0)
 
 **Tech1** VBZ (e.g. uses, has) **more NN** than **Tech2**
 
-The results of **Stanford OpenIE**: (confidence; subject; relation; object)
+
+
+The results of **Stanford OpenIE**: 
 
 1. `wideimage` is the more modern php5 approach while `phpthumb` has much more features
 
@@ -67,9 +69,37 @@ The results of **Stanford OpenIE**: (confidence; subject; relation; object)
 
 **Others**: [OTHERS.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/other.txt)
 
-[Uddin, G., & Khomh, F. (2017, October). Opiner: An opinion search and summarization engine for APIs. In *Automated Software Engineering (ASE), 2017 32nd IEEE/ACM International Conference on* (pp. 978-983). IEEE.]()
+[Uddin, G., & Khomh, F. (2017, October). Opiner: An opinion search and summarization engine for APIs. In *Automated Software Engineering (ASE), 2017 32nd IEEE/ACM International Conference on* (pp. 978-983). IEEE.](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Opiner-%20An%20Opinion%20Search%20and%20Summarization%20Engine%20for%20APIs.pdf)
 
-[](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Automatic%20Summarization%20of%20API%20Reviews.pdf)
+[Uddin, G., & Khomh, F. (2017). Automatic summarization of API reviews. Paper presented at the 159-170.](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Automatic%20Summarization%20of%20API%20Reviews.pdf)
+
+[Uddin, G., & Khomh, F. (2017). *Mining API Aspects in API Reviews*. Technical Report. 10 pages. http://swat. polymtl. ca/data/opinionvalue-technical-report. pdf.](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Automatic%20Summarization%20of%20API%20Reviews.pdf)
+
+> In a previous study [3], we surveyed software developers
+> and found that developers prefer to see opinions about the
+> following API aspects in the forum posts: 
+>
+> (1) Performance: How well does the API perform? 
+>
+> (2) Usability: How usable is the API? 
+>
+> (3) Security: How secure is the API? 
+>
+> (4) Documentation: How good is the documentation? 
+>
+> (5) Compatibility: Does the usage depends on other API? 
+>
+> (6) Portability: Can the API be used in different platforms? 
+>
+> (7) Community: How is the support around the community? 
+>
+> (8) Legal: What are licensing requirements? 
+>
+> (9) Bug: Is the API buggy? 
+>
+> (10) Only Sentiment: Opinions without specifying any aspect. 
+>
+> (11) Others: Opinions about other aspects.
 
 ### 3. Pattern 2, 3, 4
 
