--- a/weekly summary/2018-03-29.md
+++ b/weekly summary/2018-03-29.md
@@ -1,138 +1,85 @@
-### 1. Relation extraction
+### 1. Sentences embeddings & KMeans
 
-softwarerecs
+https://github.com/apachecn/MachineLearning/blob/master/docs/10.k-means%E8%81%9A%E7%B1%BB.md#k-means-%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95
 
-18 pattern07810 / 38 / 3335
+**K = 5**
 
-20 pattern234
+| No.  | Sentences | File link                                                    |
+| ---- | --------- | ------------------------------------------------------------ |
+| 0    | 1949      | [0.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/KMeans5/0.0.txt) |
+| 1    | 2456      | [1.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/KMeans5/1.0.txt) |
+| 2    | 1437      | [2.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/KMeans5/2.0.txt) |
+| 3    | 5117      | [3.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/KMeans5/3.0.txt) |
+| 4    | 2419      | [4.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/KMeans5/4.0.txt) |
 
-unix
+**K = 8**
 
-230 / 349 / 36982.0
+| No.  | Sentences | File link                                                    |
+| ---- | --------- | ------------------------------------------------------------ |
+| 0    | 1899      | [0.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/0.0.txt) |
+| 1    | 1812      | [1.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/1.0.txt) |
+| 2    | -         | [2.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/2.0.txt) |
+| 3    | 4371      | [3.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/3.0.txt) |
+| 4    | 206       | [4.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/4.0.txt) |
+| 5    | 1335      | [5.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/5.0.txt) |
+| 6    | 2048      | [6.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/6.0.txt) |
+| 7    | 1707      | [7.txt](https://github.com/hy3440/diffSimilarTech/tree/master/out/KMeans8/7.0.txt) |
 
-119 pattern234
+### 2. biKMeans (to avoid local optimum)
 
-superuser
+https://github.com/apachecn/MachineLearning/blob/master/docs/10.k-means%E8%81%9A%E7%B1%BB.md#%E4%BA%8C%E5%88%86-k-means-%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95
 
-468 pattern07810 / 836 / 74536.0
+**K = 5**
 
-368 pattern234
+| No.  | Sentences | File link                                                    |
+| ---- | --------- | ------------------------------------------------------------ |
+| 0    | 8818      | [0.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans5/0.0.txt) |
+| 1    | 2481      | [1.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans5/1.0.txt) |
+| 2    | 1341      | [2.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans5/2.0.txt) |
+| 3    | 576       | [3.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans5/3.0.txt) |
+| 4    | 162       | [4.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans5/4.0.txt) |
 
-**1312** tech pairs: [relations.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/relations.txt)
+**K = 8**
 
-**13338** pattern 0,7,8,10 / **19519** [comparative sentences](https://github.com/hy3440/diffSimilarTech/blob/master/relation/sentences.txt)/ **2069694** sentences containing similar techs
+| No.  | Sentences | File link                                                    |
+| ---- | --------- | ------------------------------------------------------------ |
+| 0    | 8798      | [0.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/0.0.txt) |
+| 1    | 2509      | [1.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/1.0.txt) |
+| 2    | 1336      | [2.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/2.0.txt) |
+| 3    | 591       | [3.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/3.0.txt) |
+| 4    | 47        | [4.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/4.0.txt) |
+| 5    | 74        | [5.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/5.0.txt) |
+| 6    | 9         | [6.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/6.0.txt) |
+| 7    | 22        | [7.txt](https://github.com/hy3440/diffSimilarTech/blob/master/out/biKMeans8/7.0.txt) |
 
-Post ID from 0 to 47615407 (Score >= 0)
+### 3. Other sites
 
-| No   | Pattern           |
-| ---- | ----------------- |
-| 0    | JJR * CIN * TECH  |
-| 8    | RBR JJ * CIN TECH |
-| 7    | TECH * VBZ * JJR  |
-| 10   | TECH * VBZ * RBR  |
+#####(1) software recommendation (**29964** posts)
 
-**Tech1** is **JJR** than **Tech2**
+**18** pattern 0,7,8,10 / **38** comparative sentences / **3335** sentences containing similar tech
 
-**Tech1** is **more JJ** than **Tech2**
+**20** pattern 2,3,4
 
-**Tech1** VBZ (e.g. uses, has) **more NN** than **Tech2**
+#####(2) unix & linux (**343412** posts)
 
+**230** pattern 0,7,8,10 / **349** comparative sentences / **36982** sentences containing similar tech
 
+**119** pattern 2,3,4
 
-The results of **Stanford OpenIE**: 
+##### (3) super user (**928151** posts)
 
-1. `wideimage` is the more modern php5 approach while `phpthumb` has much more features
+**468** pattern 0,7,8,10 / **836** comparative sentences / **74536** sentences containing similar tech
 
-| confidence | subject   | relation | object                    |
-| :--------- | :-------- | :------- | :------------------------ |
-| 1.0        | phpthumb  | has      | features                  |
-| 1.0        | wideimage | is       | modern php5 approach      |
-| 1.0        | wideimage | is       | php5 approach             |
-| 1.0        | phpthumb  | has      | more features             |
-| 1.0        | phpthumb  | has      | much more features        |
-| 1.0        | wideimage | is       | more modern php5 approach |
+**368** pattern 2,3,4
 
-2. i just checked the timings using `mysql` 5 and they are slightly worse than `postgresql`
+### 4. Examples
 
-| confidence        | subject | relation                | object         |
-| :---------------- | :------ | :---------------------- | :------------- |
-| 1.0               | they    | are                     | slightly worse |
-| 1.0               | i       | just checked            | timings        |
-| 0.682001578628607 | i       | using                   | mysql 5        |
-| 1.0               | they    | are worse than          | postgresql     |
-| 1.0               | they    | are slightly worse than | postgresql     |
-| 1.0               | i       | checked                 | timings        |
-| 1.0               | they    | are                     | worse          |
+udp tcp: https://stackoverflow.com/questions/584112/why-does-nfs-use-udp-by-default/584131#584131
 
-3. `testng` strives to be much more configurable than `junit` but in the end they both work equally well
+udp	tcp: https://stackoverflow.com/questions/799068/what-should-i-know-about-udp-programming/799142#799142
 
-| confidence | subject | relation | object                            |
-| :--------- | :------ | :------- | :-------------------------------- |
-| 1.0        | testng  | strives  | more configurable                 |
-| 1.0        | testng  | strives  | much more configurable            |
-| 1.0        | testng  | strives  | configurable than junit           |
-| 1.0        | testng  | strives  | much more configurable than junit |
-| 1.0        | testng  | strives  | configurable                      |
-| 1.0        | testng  | strives  | more configurable than junit      |
+post	get: https://stackoverflow.com/questions/1008668/how-secure-is-a-http-post/1008671#1008671
 
-### 2. Topic analysis
+nginx	apache: https://stackoverflow.com/questions/2654833/will-an-nginx-as-reverse-proxy-for-apache-help-on-dynamic-content-only/2912577#2912577
 
-**Adjectives**: [JJ.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/jj.txt)
-
-**Comparative adjectives**: [JJR.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/jjr.txt)
-
-**Nouns**: [NN.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/nn.txt)
-
-**Comparative adverbs**: [RBR.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/rbr.txt)
-
-**Others**: [OTHERS.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/other.txt)
-
-[Uddin, G., & Khomh, F. (2017, October). Opiner: An opinion search and summarization engine for APIs. In *Automated Software Engineering (ASE), 2017 32nd IEEE/ACM International Conference on* (pp. 978-983). IEEE.](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Opiner-%20An%20Opinion%20Search%20and%20Summarization%20Engine%20for%20APIs.pdf)
-
-[Uddin, G., & Khomh, F. (2017). Automatic summarization of API reviews. Paper presented at the 159-170.](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Automatic%20Summarization%20of%20API%20Reviews.pdf)
-
-[Uddin, G., & Khomh, F. (2017). *Mining API Aspects in API Reviews*. Technical Report. 10 pages. http://swat. polymtl. ca/data/opinionvalue-technical-report. pdf.](https://github.com/hy3440/diffSimilarTech/blob/master/related%20papers/Automatic%20Summarization%20of%20API%20Reviews.pdf)
-
-> In a previous study [3], we surveyed software developers
-> and found that developers prefer to see opinions about the
-> following API aspects in the forum posts: 
->
-> (1) Performance: How well does the API perform? 
->
-> (2) Usability: How usable is the API? 
->
-> (3) Security: How secure is the API? 
->
-> (4) Documentation: How good is the documentation? 
->
-> (5) Compatibility: Does the usage depends on other API? 
->
-> (6) Portability: Can the API be used in different platforms? 
->
-> (7) Community: How is the support around the community? 
->
-> (8) Legal: What are licensing requirements? 
->
-> (9) Bug: Is the API buggy? 
->
-> (10) Only Sentiment: Opinions without specifying any aspect. 
->
-> (11) Others: Opinions about other aspects.
-
-### 3. Pattern 2, 3, 4
-
-| No   | Pattern         |
-| ---- | --------------- |
-| 2    | CV * CIN * TECH |
-| 3    | CV VBG TECH     |
-| 4    | CV TECH         |
-
-[pattern234.txt](https://github.com/hy3440/diffSimilarTech/blob/master/relation/pattern234.txt)
-
-**6181** pattern 2,3,4 / **19519** [comparative sentences](https://github.com/hy3440/diffSimilarTech/blob/master/relation/sentences.txt)/ **2069694** sentences containing similar techs
-
-Post ID from 0 to 47615407 (Score >= 0)
-
-1. i prefer `zsh` over `bash` because of its support for very powerful file globbing variable expansion modifiers and faster tab completion
-2. personally i prefer `solaris` or a `bsd` for stability
-3. i personally prefer `merb` over `ruby-on-rails` as it adopts more ruby conventions
+disk	ram: https://stackoverflow.com/questions/30476266/c-extincting-features/30478460#30478460
