--- a/weekly summary/2018-04-05.md
+++ b/weekly summary/2018-04-05.md
@@ -1,3 +1,5 @@
+### 1. Keywords
+
 https://github.com/hy3440/diffSimilarTech/tree/master/keywords
 
 1.`TECH * * * * (* *) TECH **` if there only two `TECH`s
@@ -15,4 +17,20 @@ with correct locking for **safety** reasons and **heavy concurrent** use `postgr
 `first,answer,more,compliant,standard,group,clause`
 
 following the first answer it appears that `postgresql` is **more compliant to sql standard** than `mysql` so it needs a group by clause for each selected column you want to display with your aggregated function
+
+### 2. Communities
+
+Use 2rd method to extract keywords.
+
+Threshold of similarity = 0.5
+
+**Good results**
+
+1. datamapper&activerecord
+2. sortedlist&sorteddictionary
+
+**Bad results**
+
+1. png&bmp
+2. udp&tcp
 
