--- a/weekly summary/2018-04-12.md
+++ b/weekly summary/2018-04-12.md
@@ -1,3 +1,9 @@
+### 1. Community detection results (sentences > 50)
+
+https://github.com/hy3440/diffSimilarTech/tree/master/communities_v4
+
+### 2. WMD similarity examples
+
 1. sim = 0.7432854250391989  `3des` & `aes` 
 
 ```
@@ -34,3 +40,26 @@ as such traversing a nat through udp is much easier than tcp
 but it sounds like you want to do nat traversal over tcp which is a harder problem than udp
 ```
 
+5. sim = 0.524724436182015 `quicksort` & `mergesort`
+
+```
+['recursive', 'base', 'quicker']
+that way quicksort can reach recursive base case more quicker than mergesort
+['recursive', 'calls']
+quicksort consistently has less recursive calls than mergesort
+```
+
+6. sim = 0.5074195093624397 `quicksort` & `mergesort`
+
+```
+['faster', 'heapsort']
+normally quicksort is faster than mergesort which is faster than heapsort
+['recursive', 'base', 'quicker']
+that way quicksort can reach recursive base case more quicker than mergesort
+```
+
+### 3. Graph example 
+
+https://github.com/hy3440/diffSimilarTech/blob/master/communities_v3/sortedlist%26sorteddictionary_10_13.txt
+
+https://github.com/hy3440/diffSimilarTech/blob/master/communities_v3/sortedlist%26sorteddictionary_10_13.png
