Upload new extractor

--- a/weekly summary/2018-04-.md
+++ b/weekly summary/2018-04-.md
@@ -75,3 +75,29 @@ udp requires less costs than tcp
 postgresql offers more security functionality than mysql
 
 mysql provides less safety features than postgresql
+
+
+
+jruby & mri
+
+provides better performance than mri
+
+jruby will generally perform better than mri
+
+jruby is better than mri
+
+the performance of mri is worse than jruby
+
+
+
+mri is faster than jruby
+
+udp is quicker than tcp
+
+
+
+udp has a smaller overhead than tcp
+
+udp has a much lower overhead than tcp
+
+tcp has more processing overhead than udp
