--- a/weekly summary/2018-04-.md
+++ b/weekly summary/2018-04-.md
@@ -101,3 +101,17 @@ udp has a smaller overhead than tcp
 udp has a much lower overhead than tcp
 
 tcp has more processing overhead than udp
+
+
+
+new version extractor:
+
+1: 18543
+2: 8818
+3: 7484
+4: 796
+5: 861
+6: 665
+7: 4769
+total: 2069694
+compa: 23996
