add weekly summary

--- a/weekly summary/2018-09-20.md
+++ b/weekly summary/2018-09-20.md
@@ -1,2 +1,24 @@
-### 1. 
+### 1. Extract comparative relations
+
+[new_aspects.txt](../aspects/new_aspects.txt)
+
+e.g.  furthermore 3des is **much slower** than aes
+
+### 2. Extract keywords
+
+1077 keywords
+
+[keywords.xlsx](../aspects/keywords.xlsx)
+
+###3. Label with +1/-1
+
+positive & neutral: +1
+
+negative: -1
+
+However, some words may have different polarities in different sentences.
+
+e.g. complicated, larger/smaller/bigger
+
+
 
